# scorep_plugin_meminfo

./: AUTHORS  CMakeLists.txt  LICENSE  README.md
include/: memInfo.hpp  plugin.hpp
src/: plugin.cpp
